<resources>
    <string name="app_name">卫生检疫查验</string>

    <!-- 首页 -->
    <string name="Infrared_pic">红外图片</string>
    <string name="declare">申报验放</string>
    <string name="quarantine">检疫排查</string>
    <string name="test_result">检测结果</string>
    <string name="singal_case">个案溯源</string>
    <string name="browsing">疫情浏览</string>
    <string name="study_place">学习园地</string>
    <string name="work_log">工作日志</string>
    <string name="query_statistics">查询统计</string>


    <string name="input_user_name">请输入用户名或手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="back">返回</string>
    <string name="please_input">请输入用户名或密码</string>
    <string name="register">注册</string>
    <string name="main_home">首页</string>
    <string name="red_pic">红外图片</string>
    <string name="user_name">4702786</string>
    <string name="login_time">登录时间</string>
    <string name="login_time_cus">2017.12.6</string>
    <string name="forget_pwd">找回密码</string>

    <!-- 流行病学调查 -->
    <string name="clinical">临床表现</string>
    <string name="epidemiological">流行病学因素调查</string>
    <string name="case_idea">初步判断及病例处理意见</string>

    <!-- 医学排查 -->
    <string name="patients">病人主述</string>
    <string name="check_hody">体格检查</string>
    <string name="sampling_situation">采样情况</string>
    <string name="check_laboratory">实验室检查</string>
    <string name="first_visit_case_handle">初诊及病例处理意见</string>
    <string name="hospital_stand">送医院情况</string>
    <string name="supervise_stand">后续监管情况</string>
    <string name="disinfected_stand">消毒处理情况</string>

    <!-- 采集样品 -->
    <string name="collection_stand">采集情况</string>
    <string name="clinical_feature">临床表现</string>
    <string name="first_visit_handle">初步诊断意见</string>
    <string name="system_name">智慧卫生检疫监管系统</string>
    <string name="entry">录入</string>

    <string name="save">保存</string>
    <string name="close">结束放行</string>
    <string name="rash">皮疹/疱疹部位</string>
    <string name="other">其他表现</string>

</resources>
