<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.health.infrared.activity.LoginActivity">

    <include layout="@layout/toolbar_custom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/x10"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:layout_gravity="center"
            android:background="@drawable/free_rounded"
            android:hint="@string/input_user_name"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/free_rounded"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/free_login_button"
            android:text="@string/login"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>